--- a/css/about.css
+++ b/css/about.css
@@ -55,7 +55,10 @@ table {
 }
 
 /* navigation bar*/
-
+header nav {
+    display: flex;
+    justify-content: space-between;
+}
 header nav ul {
     display: flex;
     flex-direction: row;
@@ -64,7 +67,6 @@ header nav ul {
     margin: 40px 0;
 }
 
-
 header nav a {
     text-decoration: none;
     color: black;
@@ -72,7 +74,7 @@ header nav a {
 }
 
 /* header jumbo picture */
-.top-picture img {
+div img {
     width: 100%;
     height: auto;
 }
@@ -92,122 +94,86 @@ p {
     line-height: 1.4;
 }
 
-.container {
-   
-    padding: 20px;
-}
-
-.top-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
+.about-page {
+    padding: 40px 40px;
     border-bottom: 1px dashed black;
 }
 
-.top-content .text-container {
+.main {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 30px 0;
+	}
+
+.main div { 
+    border-bottom: 1px dashed black;
+    padding: 15px;
+    margin: 10px;
+}
+
+.main button {
+    margin: 30px 0;
+    padding: 15px;
+    width: 200px;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 12px;
+}
+
+.box1 {
     width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
+    height: auto;
+    padding: 0 20px;
 }
 
-.middle-content {
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
+.box1 h2 {
+    padding: 20px 0;
 }
 
-.middle-content h2 {
-    padding: 0 2%;
-    margin-bottom: 0;
+.box2 {
+    width: 48%;
+    height: auto;
+    padding: 0 20px;
 }
 
-.middle-content .boxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+.box2 h2 {
+    padding: 20px 0;
 }
 
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    background: black;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.box3 {
+    width: 48%;
+    height: auto;
+    padding: 0 20px;
 }
 
-.boxes .box:first-child {
-    background-color: teal;
+.box3 h2 {
+    padding: 20px 0;
 }
 
-.boxes .box:nth-child(2) {
-    background-color: gold;
+.box4 {
+    width: 48%;
+    height: auto;
+    padding: 0 20px;
 }
 
-.boxes .box:nth-child(3) {
-    background-color: cadetblue;
+.box4 h2 {
+    padding: 20px 0;
 }
 
-.boxes .box:nth-child(4) {
-    background-color: coral;
-}
-
-.boxes .box:nth-child(5) {
-    background-color: crimson;
-}
-
-.boxes .box:nth-child(6) {
-    background-color: forestgreen;
-}
-
-.boxes .box:nth-child(7) {
-    background-color: darkorchid;
-}
-
-.boxes .box:nth-child(8) {
-    background-color: hotpink;
-}
-
-.boxes .box:nth-child(9) {
-    background-color: indigo;
-}
-
-.boxes .box:nth-child(10) {
-    background-color: dodgerblue;
-}
-
-.bottom-content {
-    display: flex;
-    margin: 10px 2% 40px;
-    justify-content: space-around;
-}
-
-.bottom-content .text-container {
-    padding-right: 4%;
-}
-
-.bottom-content .text-container:last-child {
-    padding-right: 0;
+.bottom {
+    padding: 40px 40px;
 }
 
 footer {
-    width: 100%;
-    background: black;
+    background-color: black;
+
+    padding: 30px 0;
 }
 
-footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
-    font-size: 14px;
-}
-
-footer nav a {
-    color: grey;
+footer nav ul li a {
     text-decoration: none;
+    padding: 0 40px;
+    color: grey;
 }
-
